# dragon3_pipeline

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  REFACTORING_SUMMARY.md  _dragon3_jpg_to_movie_serial.sh  dragon3_jpg_to_movie.sh  juwels_instructions.py  nbody_tools.py  nbody_tools.py.backup  plot_nbody.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: api.md  index.md  terminology.md
dragon3_pipelines/: __init__.py  __main__.py
dragon3_pipelines/analysis/: __init__.py  b_type_binary.py  binary_stellar_type.py  cache_paths.py  compact_binary_counter.py  current_lagrangian.py  galactic_orbit.py  hdf5_scan.py  particle_tracker.py  physics.py  primordial_binary.py
dragon3_pipelines/config/: __init__.py  default_config.yaml  settings.py
dragon3_pipelines/io/: __init__.py  base.py  collision_reader.py  hdf5_reader.py  lagr_reader.py  text_parsers.py
dragon3_pipelines/scripts/: README.md  dragon3_jpg_to_movie.sh
dragon3_pipelines/utils/: __init__.py  color.py  logging.py  misc.py  serialization.py  shell.py
dragon3_pipelines/visualization/: __init__.py  base.py  binary_star.py  collision.py  galactic_orbit.py  lagrangian.py  particle_history.py  purge.py  single_star.py
scripts/: ci.sh
tests/: __init__.py  conftest.py  test_analysis.py  test_backward_compatibility.py  test_config.py  test_hdf5_scan.py  test_io.py  test_utils.py  test_visualization.py
