[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dragon3_pipelines"
version = "0.1.0"
description = "Pipelines for Dragon3 N-body simulation data analysis and visualization"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Dragon3 Team"}
]
keywords = ["astronomy", "n-body", "simulation", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "astropy>=7.0.1",
    "colour>=0.1.5",
    "h5py>=3.13.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
dragon3-plot = "dragon3_pipelines.__main__:main"

[tool.setuptools]
packages = ["dragon3_pipelines"]

[tool.setuptools.package-data]
dragon3_pipelines = ["config/*.yaml"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
